--- a/0x01-react_intro/task_3/dashboard/src/App.css
+++ b/0x01-react_intro/task_3/dashboard/src/App.css
@@ -1,19 +1,47 @@
+.App {
+	height: 100vh;
+	max-width: 100vw;
+	--border-bottom: 4px solid red;
+	--padding: 1.2em;
+	--heading-font-size: 1.4rem;
+	--gen-font-size: 1.4rem;
+}
+
 .App-header {
-  display: flex;
-  align-items: center;
-  position: relative;
+	font-size: var(--heading-font-size);
+	color: red;
+	display: flex;
+	align-items: center;
+	padding: var(--padding);
+	border-bottom: var(--border-bottom);
 }
-.App-header h1 {
-  color: red;
-  position: absolute;
-  left: 50%;
+
+.App-header img {
+	width: 250px;
+	height: 250px;
 }
+
 .App-body {
-  border-top: 4px solid red;
-  border-bottom: 4px solid red;
-  text-align: left;
-  height: 450px;
+	font-size: var(--gen-font-size);
+	padding: var(--padding);
+	border-bottom: var(--border-bottom);
+	height: 45%;
 }
+
 .App-footer {
-  text-align: center;
+	font-size: var(--gen-font-size);
+	padding: var(--padding);
+	text-align: center;
+	font-style: italic;
+}
+
+.form-inputs {
+	display: flex;
+	gap: 2em;
+	align-items: center;
+}
+
+.form-inputs .input input {
+	height: var(--gen-font-size);
+	margin-left: 10px;
 }
