--- a/0x01-react_intro/task_3/dashboard/src/Notifications.css
+++ b/0x01-react_intro/task_3/dashboard/src/Notifications.css
@@ -1,10 +1,12 @@
 .Notifications {
-	border: 3px solid var(--hred);
-	padding: 6px 12px;
+	padding: 2em;
+	border: 2px dashed red;
 }
-.Notifications li[data-priority="default"] {
+
+ul li[data='default'] {
 	color: blue;
 }
-.Notifications li[data-priority="urgent"] {
+
+ul li[data='urgent'] {
 	color: red;
 }
